--- a/docker-compose-importer.yml
+++ b/docker-compose-importer.yml
@@ -53,7 +53,12 @@ services:
     image: alpine
     container_name: firefly_iii_cron
     restart: always
-    command: sh -c "echo \"0 3 * * * wget -qO- http://app:8080/api/v1/cron/REPLACEME;echo\" | crontab - && crond -f -L /dev/stdout"
+    command: sh -c "
+      apk add tzdata
+      && ln -s /usr/share/zoneinfo/${TZ} /etc/localtime
+      | echo \"0 3 * * * wget -qO- http://app:8080/api/v1/cron/REPLACEME;echo\" 
+      | crontab - 
+      && crond -f -L /dev/stdout"
     networks:
       - firefly_iii
 volumes:
