--- a/.github/workflows/ui-testing.yaml
+++ b/.github/workflows/ui-testing.yaml
@@ -33,35 +33,28 @@ jobs:
         sudo apt update
         sudo apt install -y wget unzip xvfb libxi6 libgbm-dev libnss3 libxshmfence1 libasound2t64
 
-        # Download and install latest stable Google Chrome
+        # Install latest stable Google Chrome
         wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
         sudo apt install -y ./google-chrome-stable_current_amd64.deb
 
-        # Get Chrome full version, e.g. "139.0.7258.66"
+        # Get Chrome full version
         CHROME_FULL_VERSION=$(google-chrome --version | grep -oP "\d+\.\d+\.\d+\.\d+")
+        echo "Installed Chrome version: $CHROME_FULL_VERSION"
 
-        # Extract only major version, e.g. "139"
-        CHROME_MAJOR_VERSION=$(echo $CHROME_FULL_VERSION | cut -d '.' -f 1)
-
-        echo "Chrome full version: $CHROME_FULL_VERSION"
-        echo "Chrome major version: $CHROME_MAJOR_VERSION"
-
-        # Download matching ChromeDriver for major version (if available)
-        # Note: If chromedriver not released yet for that major, this will fail
-        wget -q -O chromedriver.zip "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/${CHROME_MAJOR_VERSION}.0.0.0/linux64/chromedriver-linux64.zip" || {
-          echo "Failed to download chromedriver for version $CHROME_MAJOR_VERSION, trying fallback"
-          # fallback to older known working version, e.g. 117:
-          wget -q -O chromedriver.zip "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/117.0.5938.92/linux64/chromedriver-linux64.zip"
-        }
+        # Download matching ChromeDriver from official chrome-for-testing bucket
+        wget -q -O chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/${CHROME_FULL_VERSION}/linux64/chromedriver-linux64.zip"
 
         unzip chromedriver.zip
-        mv */chromedriver /usr/local/bin/chromedriver
+        sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
         sudo chmod +x /usr/local/bin/chromedriver
 
-        rm -rf chromedriver.zip google-chrome-stable_current_amd64.deb
+        # Cleanup
+        rm -rf chromedriver.zip chromedriver-linux64 google-chrome-stable_current_amd64.deb
 
+        # Create Chrome user data directory
         mkdir -p /tmp/chrome-user-data
         chmod 755 /tmp/chrome-user-data
+
 
 
     - name: Cleanup existing Chrome processes
