--- a/.github/workflows/ui-testing.yaml
+++ b/.github/workflows/ui-testing.yaml
@@ -1,4 +1,3 @@
-# .github/workflows/ui-testing.yaml
 name: Selenium UI Tests
 
 on:
@@ -16,7 +15,7 @@ jobs:
       with:
         fetch-depth: 1  
         repository: tmeraslan/firefly-UI
-        token: ${{ secrets.UI_TESTING_GITHUB_TOKEN }}  # Use the token to access the repo
+        token: ${{ secrets.UI_TESTING_GITHUB_TOKEN }}
       
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -37,37 +36,31 @@ jobs:
         wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
         sudo apt install -y ./google-chrome-stable_current_amd64.deb
 
-        # Get Chrome full version
+        # Get full Chrome version
         CHROME_FULL_VERSION=$(google-chrome --version | grep -oP "\d+\.\d+\.\d+\.\d+")
         echo "Installed Chrome version: $CHROME_FULL_VERSION"
 
-        # Download matching ChromeDriver from official chrome-for-testing bucket
+        # Download matching ChromeDriver from official repo
         wget -q -O chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/${CHROME_FULL_VERSION}/linux64/chromedriver-linux64.zip"
 
         unzip chromedriver.zip
         sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
         sudo chmod +x /usr/local/bin/chromedriver
 
-        # Cleanup
         rm -rf chromedriver.zip chromedriver-linux64 google-chrome-stable_current_amd64.deb
 
-        # Create Chrome user data directory
         mkdir -p /tmp/chrome-user-data
         chmod 755 /tmp/chrome-user-data
 
-
-
     - name: Cleanup existing Chrome processes
       run: |
-          # Kill any existing Chrome processes
-          pkill -f chrome || true
-          pkill -f chromedriver || true
-          # Clean up any existing user data directories
-          rm -rf /tmp/chrome-user-data-* || true
+        pkill -f chrome || true
+        pkill -f chromedriver || true
+        rm -rf /tmp/chrome-user-data-* || true
         
     - name: Run Selenium tests
       env:
-        CI : true
+        CI: true
         HEADLESS: true
         FIREFLY_URL: 34.240.131.103:8080
       run: |
