--- a/.github/workflows/ui-testing.yaml
+++ b/.github/workflows/ui-testing.yaml
@@ -1,9 +1,10 @@
+# .github/workflows/ui-testing.yaml
 name: Selenium UI Tests
 
 on:
   pull_request:
     branches:
-     - main    
+      - main    
 
 jobs:
   selenium-tests:
@@ -32,22 +33,31 @@ jobs:
         sudo apt update
         sudo apt install -y wget unzip xvfb libxi6 libgbm-dev libnss3 libxshmfence1 libasound2t64
 
-        # Install latest stable Google Chrome
+        # Download and install latest stable Google Chrome
         wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
         sudo apt install -y ./google-chrome-stable_current_amd64.deb
 
-        # Get full Chrome version
+        # Get Chrome full version (e.g. 138.0.7204.183)
         CHROME_FULL_VERSION=$(google-chrome --version | grep -oP "\d+\.\d+\.\d+\.\d+")
-        echo "Installed Chrome version: $CHROME_FULL_VERSION"
+        echo "Chrome version detected: $CHROME_FULL_VERSION"
 
-        # Download matching ChromeDriver from official repo
-        wget -q -O chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/${CHROME_FULL_VERSION}/linux64/chromedriver-linux64.zip"
+        # Download matching ChromeDriver from official Chrome-for-Testing storage
+        DRIVER_URL="https://storage.googleapis.com/chrome-for-testing-public/${CHROME_FULL_VERSION}/linux64/chromedriver-linux64.zip"
+
+        if wget -q --spider "$DRIVER_URL"; then
+          echo "Downloading ChromeDriver for version $CHROME_FULL_VERSION"
+          wget -q -O chromedriver.zip "$DRIVER_URL"
+        else
+          echo "ChromeDriver not found for $CHROME_FULL_VERSION, falling back to latest stable"
+          LATEST_DRIVER_URL=$(curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions.json | grep -oP '"linux64":\s*"\K[^"]+' | head -1)
+          wget -q -O chromedriver.zip "$LATEST_DRIVER_URL"
+        fi
 
         unzip chromedriver.zip
-        sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
+        mv */chromedriver /usr/local/bin/chromedriver
         sudo chmod +x /usr/local/bin/chromedriver
 
-        rm -rf chromedriver.zip chromedriver-linux64 google-chrome-stable_current_amd64.deb
+        rm -rf chromedriver.zip google-chrome-stable_current_amd64.deb
 
         mkdir -p /tmp/chrome-user-data
         chmod 755 /tmp/chrome-user-data
