--- a/.github/workflows/ui-testing.yaml
+++ b/.github/workflows/ui-testing.yaml
@@ -4,7 +4,7 @@ name: Selenium UI Tests
 on:
   pull_request:
     branches:
-      - main    
+     - main    
 
 jobs:
   selenium-tests:
@@ -16,7 +16,7 @@ jobs:
       with:
         fetch-depth: 1  
         repository: tmeraslan/firefly-UI
-        token: ${{ secrets.UI_TESTING_GITHUB_TOKEN }}
+        token: ${{ secrets.UI_TESTING_GITHUB_TOKEN }}  # Use the token to access the repo
       
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -28,45 +28,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         
-    - name: Install Chrome & ChromeDriver
+    - name: Install Chrome and ChromeDriver
       run: |
-        sudo apt update
-        sudo apt install -y wget unzip xvfb libxi6 libgbm-dev libnss3 libxshmfence1 libasound2t64 curl jq
-
-        # Install latest stable Chrome
-        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-        sudo apt install -y ./google-chrome-stable_current_amd64.deb
-
-        # Get full Chrome version
-        CHROME_FULL_VERSION=$(google-chrome --version | grep -oP "\d+\.\d+\.\d+\.\d+")
-        echo "Detected Chrome version: $CHROME_FULL_VERSION"
-
-        # Check if exact ChromeDriver version exists
-        DRIVER_URL="https://storage.googleapis.com/chrome-for-testing-public/${CHROME_FULL_VERSION}/linux64/chromedriver-linux64.zip"
-        if wget -q --spider "$DRIVER_URL"; then
-          echo "Downloading exact ChromeDriver for version $CHROME_FULL_VERSION"
-          wget -q -O chromedriver.zip "$DRIVER_URL"
-        else
-          echo "Exact ChromeDriver not found, falling back to last known good version"
-          LATEST_DRIVER_VERSION=$(curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions.json | jq -r '.channels.Stable.version')
-          echo "Using ChromeDriver version: $LATEST_DRIVER_VERSION"
-          wget -q -O chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/${LATEST_DRIVER_VERSION}/linux64/chromedriver-linux64.zip"
-        fi
-
-        unzip chromedriver.zip
-        mv */chromedriver /usr/local/bin/chromedriver
-        sudo chmod +x /usr/local/bin/chromedriver
-
-        rm -rf chromedriver.zip google-chrome-stable_current_amd64.deb
-
-        mkdir -p /tmp/chrome-user-data
-        chmod 755 /tmp/chrome-user-data
-
-    - name: Cleanup existing Chrome processes
-      run: |
-        pkill -f chrome || true
-        pkill -f chromedriver || true
-        rm -rf /tmp/chrome-user-data-* || true
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
         
     - name: Run Selenium tests
       env:
