--- a/.github/workflows/ui-testing.yaml
+++ b/.github/workflows/ui-testing.yaml
@@ -1,10 +1,9 @@
-# .github/workflows/ui-testing.yaml
 name: Selenium UI Tests
 
 on:
   pull_request:
     branches:
-     - main    
+      - main    
 
 jobs:
   selenium-tests:
@@ -16,7 +15,7 @@ jobs:
       with:
         fetch-depth: 1  
         repository: tmeraslan/firefly-UI
-        token: ${{ secrets.UI_TESTING_GITHUB_TOKEN }}  # Use the token to access the repo
+        token: ${{ secrets.UI_TESTING_GITHUB_TOKEN }}
       
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -28,10 +27,45 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         
-    - name: Install Chrome and ChromeDriver
+    - name: Install Chrome & ChromeDriver
       run: |
-        sudo apt-get update
-        sudo apt-get install -y google-chrome-stable
+        sudo apt update
+        sudo apt install -y wget unzip xvfb libxi6 libgbm-dev libnss3 libxshmfence1 libasound2t64 curl jq
+
+        # Install latest Chrome
+        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+        sudo apt install -y ./google-chrome-stable_current_amd64.deb
+
+        # Get full Chrome version
+        CHROME_FULL_VERSION=$(google-chrome --version | grep -oP "\d+\.\d+\.\d+\.\d+")
+        echo "Detected Chrome version: $CHROME_FULL_VERSION"
+
+        # Try exact ChromeDriver version
+        DRIVER_URL="https://storage.googleapis.com/chrome-for-testing-public/${CHROME_FULL_VERSION}/linux64/chromedriver-linux64.zip"
+        if wget -q --spider "$DRIVER_URL"; then
+          echo "Downloading ChromeDriver for version $CHROME_FULL_VERSION"
+          wget -q -O chromedriver.zip "$DRIVER_URL"
+        else
+          echo "Exact version not found, using last known good stable"
+          LATEST_DRIVER_VERSION=$(curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions.json | jq -r '.channels.Stable.version')
+          echo "Using ChromeDriver version: $LATEST_DRIVER_VERSION"
+          wget -q -O chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/${LATEST_DRIVER_VERSION}/linux64/chromedriver-linux64.zip"
+        fi
+
+        unzip chromedriver.zip
+        sudo mv */chromedriver /usr/local/bin/chromedriver
+        sudo chmod +x /usr/local/bin/chromedriver
+
+        rm -rf chromedriver.zip google-chrome-stable_current_amd64.deb
+
+        mkdir -p /tmp/chrome-user-data
+        chmod 755 /tmp/chrome-user-data
+
+    - name: Cleanup existing Chrome processes
+      run: |
+        pkill -f chrome || true
+        pkill -f chromedriver || true
+        rm -rf /tmp/chrome-user-data-* || true
         
     - name: Run Selenium tests
       env:
