--- a/.github/workflows/ui-testing.yaml
+++ b/.github/workflows/ui-testing.yaml
@@ -36,20 +36,29 @@ jobs:
         wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
         sudo apt install -y ./google-chrome-stable_current_amd64.deb
 
-        # Get full Chrome version
+        # Get Chrome full & major version
         CHROME_FULL_VERSION=$(google-chrome --version | grep -oP "\d+\.\d+\.\d+\.\d+")
-        echo "Detected Chrome version: $CHROME_FULL_VERSION"
+        CHROME_MAJOR_VERSION=$(echo $CHROME_FULL_VERSION | cut -d '.' -f 1)
+        echo "Detected Chrome version: $CHROME_FULL_VERSION (major: $CHROME_MAJOR_VERSION)"
 
-        # Try exact ChromeDriver version
+        # Try exact version
         DRIVER_URL="https://storage.googleapis.com/chrome-for-testing-public/${CHROME_FULL_VERSION}/linux64/chromedriver-linux64.zip"
         if wget -q --spider "$DRIVER_URL"; then
-          echo "Downloading ChromeDriver for version $CHROME_FULL_VERSION"
+          echo "Downloading ChromeDriver for exact version $CHROME_FULL_VERSION"
           wget -q -O chromedriver.zip "$DRIVER_URL"
         else
-          echo "Exact version not found, using last known good stable"
+          # Try last known good stable
           LATEST_DRIVER_VERSION=$(curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions.json | jq -r '.channels.Stable.version')
-          echo "Using ChromeDriver version: $LATEST_DRIVER_VERSION"
-          wget -q -O chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/${LATEST_DRIVER_VERSION}/linux64/chromedriver-linux64.zip"
+          DRIVER_URL="https://storage.googleapis.com/chrome-for-testing-public/${LATEST_DRIVER_VERSION}/linux64/chromedriver-linux64.zip"
+          if wget -q --spider "$DRIVER_URL"; then
+            echo "Using last known good stable: $LATEST_DRIVER_VERSION"
+            wget -q -O chromedriver.zip "$DRIVER_URL"
+          else
+            # Try major version latest
+            echo "Falling back to major version $CHROME_MAJOR_VERSION latest"
+            DRIVER_URL="https://storage.googleapis.com/chrome-for-testing-public/${CHROME_MAJOR_VERSION}.0.0.0/linux64/chromedriver-linux64.zip"
+            wget -q -O chromedriver.zip "$DRIVER_URL"
+          fi
         fi
 
         unzip chromedriver.zip
@@ -57,9 +66,40 @@ jobs:
         sudo chmod +x /usr/local/bin/chromedriver
 
         rm -rf chromedriver.zip google-chrome-stable_current_amd64.deb
-
         mkdir -p /tmp/chrome-user-data
         chmod 755 /tmp/chrome-user-data
+          run: |
+            sudo apt update
+            sudo apt install -y wget unzip xvfb libxi6 libgbm-dev libnss3 libxshmfence1 libasound2t64 curl jq
+
+            # Install latest Chrome
+            wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+            sudo apt install -y ./google-chrome-stable_current_amd64.deb
+
+            # Get full Chrome version
+            CHROME_FULL_VERSION=$(google-chrome --version | grep -oP "\d+\.\d+\.\d+\.\d+")
+            echo "Detected Chrome version: $CHROME_FULL_VERSION"
+
+            # Try exact ChromeDriver version
+            DRIVER_URL="https://storage.googleapis.com/chrome-for-testing-public/${CHROME_FULL_VERSION}/linux64/chromedriver-linux64.zip"
+            if wget -q --spider "$DRIVER_URL"; then
+              echo "Downloading ChromeDriver for version $CHROME_FULL_VERSION"
+              wget -q -O chromedriver.zip "$DRIVER_URL"
+            else
+              echo "Exact version not found, using last known good stable"
+              LATEST_DRIVER_VERSION=$(curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions.json | jq -r '.channels.Stable.version')
+              echo "Using ChromeDriver version: $LATEST_DRIVER_VERSION"
+              wget -q -O chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/${LATEST_DRIVER_VERSION}/linux64/chromedriver-linux64.zip"
+            fi
+
+            unzip chromedriver.zip
+            sudo mv */chromedriver /usr/local/bin/chromedriver
+            sudo chmod +x /usr/local/bin/chromedriver
+
+            rm -rf chromedriver.zip google-chrome-stable_current_amd64.deb
+
+            mkdir -p /tmp/chrome-user-data
+            chmod 755 /tmp/chrome-user-data
 
     - name: Cleanup existing Chrome processes
       run: |
