--- a/docker-compose-importer.yml
+++ b/docker-compose-importer.yml
@@ -55,11 +55,11 @@ services:
     container_name: firefly_iii_cron
     restart: always
     command: sh -c "
-      apk add tzdata
-      && ln -s /usr/share/zoneinfo/$$TZ /etc/localtime
-      | echo \"0 3 * * * wget -qO- http://app:8080/api/v1/cron/$$STATIC_CRON_TOKEN;echo\"
-      | crontab - 
-      && crond -f -L /dev/stdout"
+      apk add tzdata && \
+      ln -s /usr/share/zoneinfo/$$TZ /etc/localtime && \
+      echo \"0 3 * * * wget -qO- http://app:8080/api/v1/cron/$$STATIC_CRON_TOKEN;echo\"
+      | crontab - && \
+      crond -f -L /dev/stdout"
     networks:
       - firefly_iii
 volumes:
